# substrate-sdk-android

./: .editorconfig  .gitignore  NOTICE  README.md  build.gradle  gradle.properties  gradlew  jetpack.yml  jitpack.sh  jitpack.yml  maven-publish-android.gradle  maven-publish-helper.gradle  maven-publish-java.gradle  publish.gradle  rust-toolchain.toml  settings.gradle
.github/: setup_android.sh
.github/workflows/: android.yml  pull_req_check.yml  release.yml  stage.yml
.github/workflows/install/: action.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
codegen/: build.gradle  settings.gradle
coroutines-adapter/: build.gradle
coroutines-adapter/src/main/: AndroidManifest.xml
decoratable-api/: build.gradle
decoratable-api/src/main/: AndroidManifest.xml
fearless-utils/: build.gradle
fearless-utils/signing/: key.gpg
gradle/wrapper/: gradle-wrapper.properties
gson-codec/: build.gradle
gson-codec/src/main/: AndroidManifest.xml
identicon/: build.gradle
identicon/src/main/: AndroidManifest.xml
keyring/: build.gradle
keyring/src/main/: AndroidManifest.xml
koltinx-serialization-scale/: build.gradle
koltinx-serialization-scale/src/main/: AndroidManifest.xml
samples/: build.gradle  polkadot-types.json
samples/src/main/: AndroidManifest.xml
scripts/: publish-root.gradle  secrets.gradle
sr25519-java/: Cargo.toml
sr25519-java/src/: lib.rs
substrate-sdk-android/: build.gradle  gradle.properties
subtrate-sdk-android/: build.gradle
subtrate-sdk-android/src/main/: AndroidManifest.xml
test-shared/: build.gradle
(+712 files in other folders)
