[package]
name = "sr25519java"
version = "0.1.0"
authors = ['Novasama Technologies']
edition = "2018"

[dependencies]
zeroize = { version="<=1.1.1" }
zeroize_derive = { version="<=1.1.1" }
log = { version="<=0.4.11" }
jni = { version = "0.17.0", default-features = false }
schnorrkel = { version="<=0.9.1" }

[profile.release]
lto = true
opt-level = "s"

[lib]
name = "sr25519java"
crate-type = ["cdylib"]
